--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uplift",
+  "name": "jobsite",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "cors": "^2.8.1",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "jwt-simple": "^0.5.0"
   }
 }
