--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.15.2",
     "cors": "^2.8.1",
     "express": "^4.14.0",
-    "jwt-simple": "^0.5.0"
+    "jwt-simple": "^0.5.0",
+    "massive": "^2.5.0"
   }
 }
