--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "jwt-simple": "^0.5.0",
-    "massive": "^2.5.0"
+    "massive": "^2.5.0",
+    "moment": "^2.16.0"
   }
 }
